# HelloCmake

./: README.md
src/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
